[package]
name = "zipper"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4"
zip = "0.6"
tar = "0.4"
flate2 = "1.0"
xz2 = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
tempfile = "3.10"
thiserror = "1.0"
